# hue-backup

./: .gitignore  README.md  REFACTORING_PROGRESS.md  ZONE_PROGRAMMING_GUIDE.md  hue_backup.py  hue_control.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependabot-auto-merge.yml
commands/: cache.py  control.py  inspection.py  mapping.py  room.py  scene_management.py  setup.py  zone_programming.py
commands/inspection/: __init__.py  commands.py  devices.py  locations.py  scenes.py  status.py  switches.py
core/: __init__.py  auth.py  cache.py  config.py  controller.py  huebridge_cacert.pem  tls.py
models/: button_config.py  room.py  utils.py  zone_utils.py
tests/: __init__.py  conftest.py  test_button_config.py  test_config.py  test_controller.py  test_inspection.py  test_structure.py  test_tls.py  test_utils.py
