[project]
name = "hue-backup"
version = "0.1.0"
description = "CLI for backing up and restoring Philips Hue switch configurations and room settings"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "pygments>=2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
hue = "hue_backup:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
